--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
+Flask-Cors==5.0.0
 Flask-SocketIO==5.3.7
 geographiclib==2.0
 geopy==2.4.1
