--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,33 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
+easy-trilateration==0.1.4
 Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-SocketIO==5.3.7
+fonttools==4.54.1
 geographiclib==2.0
 geopy==2.4.1
 h11==0.14.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+kiwisolver==1.4.7
 MarkupSafe==2.1.5
+matplotlib==3.9.2
+numpy==2.1.1
+packaging==24.1
+pillow==10.4.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
 python-engineio==4.9.1
 python-socketio==5.11.4
 requests==2.32.3
+scipy==1.14.1
 simple-websocket==1.0.0
+six==1.16.0
 urllib3==2.2.3
 Werkzeug==3.0.4
 wsproto==1.2.0
