--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@unocss/preset-uno": "^0.63.3",
+    "@unocss/preset-web-fonts": "^0.63.3"
+  }
 }
