added brief draft of flowbite

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.REPL.enableREPLSmartSend": true
+    "python.REPL.enableREPLSmartSend": true,
+    "liveServer.settings.port": 5501
 }
